--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -45,6 +45,8 @@
     <color name="color_table_1">#f0f3f6</color>
 
     <color name="agent_color_1">#803e3e3e</color>
+    <color name="agent_color_1NoOpp">#ff3e3e3e</color>
+    <color name="agent_color_1Opp">#993e3e3e</color>
 
 </resources>
 
