--- a/app/src/main/res/layout/actionbar_info_layout.xml
+++ b/app/src/main/res/layout/actionbar_info_layout.xml
@@ -9,9 +9,9 @@
     <!-- ActionBar : Back / Title / Info -->
     <LinearLayout
         android:id="@+id/btnPrev_layout"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_marginStart="8dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
         android:layout_gravity="center|center_horizontal|center_vertical"
         android:gravity="center|center_horizontal|center_vertical"
         app:layout_constraintBottom_toBottomOf="parent"
