--- a/app/src/main/res/layout/activity_coupone.xml
+++ b/app/src/main/res/layout/activity_coupone.xml
@@ -16,9 +16,9 @@
         <!-- ActionBar : Back / Title / Info -->
         <LinearLayout
             android:id="@+id/coupone_btnPrev_layout"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_marginStart="20dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="24dp"
             android:layout_gravity="center|center_horizontal|center_vertical"
             android:gravity="center|center_horizontal|center_vertical"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -37,6 +37,7 @@
             android:fontFamily="@font/nanumsquareregular"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginRight="24dp"
             android:gravity="center|center_horizontal"
             android:text="@string/title_coupone"
             android:textColor="#3e3e3e"
@@ -65,7 +66,7 @@
         android:id="@+id/coupone_list_empty"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="140dp"
+
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -79,6 +80,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="43dp"
             android:gravity="center|center_horizontal|center_vertical"
+            android:layout_gravity="center"
             android:text="등록된 쿠폰이 없습니다."
             android:textSize="16sp"
             android:textColor="#993e3e3e"
