--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -57,7 +57,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:src="@drawable/pin" />
+        android:src="@drawable/current_icon" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/btnReserveAddress"
