--- a/app/src/main/res/layout/activity_myinfo_recom.xml
+++ b/app/src/main/res/layout/activity_myinfo_recom.xml
@@ -16,9 +16,9 @@
         <!-- ActionBar : Back / Title / Info -->
         <LinearLayout
             android:id="@+id/myinfo_recom_btnPrev_layout"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_marginStart="20dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="24dp"
             android:layout_gravity="center|center_horizontal|center_vertical"
             android:gravity="center|center_horizontal|center_vertical"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -37,6 +37,7 @@
             android:fontFamily="@font/nanumsquareregular"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginRight="24dp"
             android:gravity="center|center_horizontal"
             android:text="@string/myinfo_recom_title"
             android:textColor="#3e3e3e"
@@ -87,7 +88,7 @@
                         <TextView
                             android:id="@+id/myinfo_user_title"
                             android:fontFamily="@font/nanumsquareextrabold"
-                            android:layout_width="29dp"
+                            android:layout_width="wrap_content"
                             android:layout_height="26dp"
                             android:layout_gravity="center|center_horizontal|center_vertical"
                             android:letterSpacing="0.05"
@@ -289,7 +290,7 @@
                         <TextView
                             android:id="@+id/myinfo_user_title821"
                             android:fontFamily="@font/nanumsquareextrabold"
-                            android:layout_width="29dp"
+                            android:layout_width="wrap_content"
                             android:layout_height="26dp"
                             android:layout_marginTop="60dp"
                             android:layout_gravity="center|center_horizontal|center_vertical"
@@ -404,7 +405,7 @@
                 <LinearLayout
                     android:id="@+id/myinfo_linearLayout122"
                     android:layout_width="match_parent"
-                    android:layout_height="17dp"
+                    android:layout_height="wrap_content"
                     android:layout_marginTop="55dp"
                     android:layout_marginStart="31dp"
                     android:layout_marginEnd="28dp"
@@ -611,7 +612,7 @@
                             android:gravity="left"
                             android:letterSpacing="0.05"
                             android:lineSpacingExtra="9sp"
-                            android:text="내가 초대한 친구가 서비스를 이용할 때 마다, 이용 요금의 일정 금액을 본인(초대자)에게 페이백하여 보상을 제공하는 제도입니다."
+                            android:text="ㆍ내가 초대한 친구가 서비스를 이용할 때 마다, 이용 요금의 일정 금액을 본인(초대자)에게 페이백하여 보상을 제공하는 제도입니다."
                             android:textColor="@color/textColorPrimary"
                             android:textSize="13sp" />
                     </LinearLayout>
@@ -677,36 +678,18 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
+                    android:layout_marginBottom="42dp"
                     android:orientation="vertical"
                     tools:ignore="MissingConstraints">
 
                     <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="22dp"
-                        android:layout_gravity="center|center_horizontal|center_vertical"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="left|center_horizontal|center_vertical"
                         android:orientation="vertical">
 
                         <TextView
-                            android:fontFamily="@font/nanumsquareregular"
-                            android:layout_width="wrap_content"
-                            android:layout_height="17dp"
-                            android:layout_gravity="left|center_horizontal|center_vertical"
-                            android:gravity="center"
-                            android:letterSpacing="0.05"
-                            android:lineSpacingExtra="9sp"
-                            android:text="추천인은 최초 등록 후, 절대 변경이 불가합니다."
-                            android:textColor="@color/textColorPrimary"
-                            android:textSize="13sp" />
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="44dp"
-                        android:layout_marginTop="2dp"
-                        android:layout_gravity="center|center_horizontal|center_vertical"
-                        android:orientation="vertical">
-
-                        <TextView
+                            android:id="@+id/manage_text_1"
                             android:fontFamily="@font/nanumsquareregular"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
@@ -714,71 +697,92 @@
                             android:gravity="left"
                             android:letterSpacing="0.05"
                             android:lineSpacingExtra="9sp"
-                            android:text="추천인 등록 시 지급되는 5천원 할인쿠폰은 발행일로 부터 14일 이내에 사용 가능합니다."
+                            android:text="@string/recomm_manage_str"
                             android:textColor="@color/textColorPrimary"
                             android:textSize="13sp" />
                     </LinearLayout>
+                    <!--
+                                        <LinearLayout
+                                            android:layout_width="match_parent"
+                                            android:layout_height="44dp"
+                                            android:layout_marginTop="2dp"
+                                            android:layout_gravity="center|center_horizontal|center_vertical"
+                                            android:orientation="vertical">
 
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="22dp"
-                        android:layout_marginTop="2dp"
-                        android:layout_gravity="center|center_horizontal|center_vertical"
-                        android:orientation="vertical">
+                                            <TextView
+                                                android:fontFamily="@font/nanumsquareregular"
+                                                android:layout_width="wrap_content"
+                                                android:layout_height="wrap_content"
+                                                android:layout_gravity="left|center_horizontal|center_vertical"
+                                                android:gravity="left"
+                                                android:letterSpacing="0.05"
+                                                android:lineSpacingExtra="9sp"
+                                                android:text="ㆍ추천인 등록 시 지급되는 5천원 할인쿠폰은 발행일로 부터 14일 이내에 사용 가능합니다."
+                                                android:textColor="@color/textColorPrimary"
+                                                android:textSize="13sp" />
+                                        </LinearLayout>
 
-                        <TextView
-                            android:fontFamily="@font/nanumsquareregular"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="left|center_horizontal|center_vertical"
-                            android:gravity="left"
-                            android:letterSpacing="0.05"
-                            android:lineSpacingExtra="9sp"
-                            android:text="추천인 등록 시, 본인의 코드는 등록할 수 없습니다."
-                            android:textColor="@color/textColorPrimary"
-                            android:textSize="13sp" />
-                    </LinearLayout>
+                                        <LinearLayout
+                                            android:layout_width="match_parent"
+                                            android:layout_height="22dp"
+                                            android:layout_marginTop="2dp"
+                                            android:layout_gravity="center|center_horizontal|center_vertical"
+                                            android:orientation="vertical">
 
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="66dp"
-                        android:layout_marginTop="2dp"
-                        android:layout_gravity="center|center_horizontal|center_vertical"
-                        android:orientation="vertical">
+                                            <TextView
+                                                android:fontFamily="@font/nanumsquareregular"
+                                                android:layout_width="wrap_content"
+                                                android:layout_height="wrap_content"
+                                                android:layout_gravity="left|center_horizontal|center_vertical"
+                                                android:gravity="left"
+                                                android:letterSpacing="0.05"
+                                                android:lineSpacingExtra="9sp"
+                                                android:text="ㆍ추천인 등록 시, 본인의 코드는 등록할 수 없습니다."
+                                                android:textColor="@color/textColorPrimary"
+                                                android:textSize="13sp" />
+                                        </LinearLayout>
 
-                        <TextView
-                            android:fontFamily="@font/nanumsquareregular"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="left|center_horizontal|center_vertical"
-                            android:gravity="left"
-                            android:letterSpacing="0.05"
-                            android:lineSpacingExtra="9sp"
-                            android:text="본 페이백 시스템의 취지에 맞지 않는 부정 참여가 확인되는 경우 포인트를 회수하거나 참여 제한 등의 조치가 적용 될 수 있습니다."
-                            android:textColor="@color/textColorPrimary"
-                            android:textSize="13sp" />
-                    </LinearLayout>
+                                        <LinearLayout
+                                            android:layout_width="match_parent"
+                                            android:layout_height="66dp"
+                                            android:layout_marginTop="2dp"
+                                            android:layout_gravity="center|center_horizontal|center_vertical"
+                                            android:orientation="vertical">
 
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="44dp"
-                        android:layout_marginTop="2dp"
-                        android:layout_marginBottom="42dp"
-                        android:layout_gravity="center|center_horizontal|center_vertical"
-                        android:orientation="vertical">
+                                            <TextView
+                                                android:fontFamily="@font/nanumsquareregular"
+                                                android:layout_width="wrap_content"
+                                                android:layout_height="wrap_content"
+                                                android:layout_gravity="left|center_horizontal|center_vertical"
+                                                android:gravity="left"
+                                                android:letterSpacing="0.05"
+                                                android:lineSpacingExtra="9sp"
+                                                android:text="ㆍ본 페이백 시스템의 취지에 맞지 않는 부정 참여가 확인되는 경우 포인트를 회수하거나 참여 제한 등의 조치가 적용 될 수 있습니다."
+                                                android:textColor="@color/textColorPrimary"
+                                                android:textSize="13sp" />
+                                        </LinearLayout>
 
-                        <TextView
-                            android:fontFamily="@font/nanumsquareregular"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="left|center_horizontal|center_vertical"
-                            android:gravity="left"
-                            android:letterSpacing="0.05"
-                            android:lineSpacingExtra="9sp"
-                            android:text="상세 내용은 당사 고객센터 (1899-4299)로 문의주시면 친절하게 안내드립니다."
-                            android:textColor="@color/textColorPrimary"
-                            android:textSize="13sp" />
-                    </LinearLayout>
+                                        <LinearLayout
+                                            android:layout_width="match_parent"
+                                            android:layout_height="44dp"
+                                            android:layout_marginTop="2dp"
+                                            android:layout_marginBottom="42dp"
+                                            android:layout_gravity="center|center_horizontal|center_vertical"
+                                            android:orientation="vertical">
+
+                                            <TextView
+                                                android:fontFamily="@font/nanumsquareregular"
+                                                android:layout_width="wrap_content"
+                                                android:layout_height="wrap_content"
+                                                android:layout_gravity="left|center_horizontal|center_vertical"
+                                                android:gravity="left"
+                                                android:letterSpacing="0.05"
+                                                android:lineSpacingExtra="9sp"
+                                                android:text="ㆍ상세 내용은 당사 고객센터 (1899-4299)로 문의주시면 친절하게 안내드립니다."
+                                                android:textColor="@color/textColorPrimary"
+                                                android:textSize="13sp" />
+                                        </LinearLayout>
+                    -->
                 </LinearLayout>
 
 
