--- a/app/src/main/res/layout/activity_password_change.xml
+++ b/app/src/main/res/layout/activity_password_change.xml
@@ -6,42 +6,42 @@
     android:layout_height="match_parent"
     android:background="@color/customColorPrimary1"
     tools:context=".PasswordChangeActivity">
-<!--
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:layout_alignParentTop="true"
-        android:background="@color/customColorPrimary1"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <ImageView
-            android:id="@+id/btnPrev"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:layout_marginStart="24dp"
-            android:layout_marginTop="16dp"
-            android:contentDescription="@string/actionbar_prev_icon_description"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:src="@drawable/filled" />
-
-        <TextView
-            android:id="@+id/title_activity"
+    <!--
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="48dp"
-            android:gravity="center_horizontal|center_vertical"
-            android:text="@string/title_activity_password_change"
-            android:textColor="#3e3e3e"
-            android:textSize="16sp" />
+            android:layout_height="?attr/actionBarSize"
+            android:layout_alignParentTop="true"
+            android:background="@color/customColorPrimary1"
+            android:theme="@style/ThemeOverlay.AppCompat.Dark"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
-    </androidx.appcompat.widget.Toolbar>
--->
+            <ImageView
+                android:id="@+id/btnPrev"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:layout_marginStart="24dp"
+                android:layout_marginTop="16dp"
+                android:contentDescription="@string/actionbar_prev_icon_description"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                android:src="@drawable/filled" />
+
+            <TextView
+                android:id="@+id/title_activity"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="48dp"
+                android:gravity="center_horizontal|center_vertical"
+                android:text="@string/title_activity_password_change"
+                android:textColor="#3e3e3e"
+                android:textSize="16sp" />
+
+        </androidx.appcompat.widget.Toolbar>
+    -->
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
@@ -53,7 +53,7 @@
             android:id="@+id/change_btnPrev"
             android:layout_width="24dp"
             android:layout_height="24dp"
-            android:layout_marginStart="32dp"
+            android:layout_marginStart="24dp"
             android:contentDescription="@string/actionbar_prev_icon_description"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -64,6 +64,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center|center_horizontal"
+            android:layout_marginRight="24dp"
             android:text="@string/title_activity_password_change"
             android:textColor="#3e3e3e"
             android:textSize="16sp"
@@ -165,50 +166,50 @@
         app:srcCompat="@drawable/lock" />
 -->
 
-<!--
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="62dp"
-        android:layout_marginTop="18dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/description_activity">
-
-        <Button
-            android:id="@+id/btnPassword1"
+    <!--
+        <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="52dp"
-            android:layout_marginStart="40dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginEnd="40dp"
-            android:background="@drawable/white_button_7dp"
-            android:clickable="false"
-            android:shadowColor="#C4C4C4"
-            android:shadowDx="0"
-            android:shadowDy="20"
-            android:shadowRadius="7"
-            android:textColor="#000000"
-            android:textSize="15sp"
+            android:layout_height="62dp"
+            android:layout_marginTop="18dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.49"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/description_activity" />
+            app:layout_constraintTop_toBottomOf="@+id/description_activity">
 
-        <ImageView
-            android:id="@+id/imageView2"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:layout_marginStart="52dp"
-            android:layout_marginTop="14dp"
-            android:foreground="@drawable/lock"
-            app:layout_constraintBottom_toBottomOf="@+id/btnPassword1"
-            app:layout_constraintEnd_toEndOf="@+id/btnPassword1"
-            app:layout_constraintStart_toStartOf="@+id/btnPassword1"
-            app:layout_constraintTop_toTopOf="@+id/btnPassword1"
-            app:layout_constraintVertical_bias="0.51"
-            app:srcCompat="@drawable/lock" />
-    </FrameLayout>
--->
+            <Button
+                android:id="@+id/btnPassword1"
+                android:layout_width="match_parent"
+                android:layout_height="52dp"
+                android:layout_marginStart="40dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginEnd="40dp"
+                android:background="@drawable/white_button_7dp"
+                android:clickable="false"
+                android:shadowColor="#C4C4C4"
+                android:shadowDx="0"
+                android:shadowDy="20"
+                android:shadowRadius="7"
+                android:textColor="#000000"
+                android:textSize="15sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.49"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/description_activity" />
+
+            <ImageView
+                android:id="@+id/imageView2"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:layout_marginStart="52dp"
+                android:layout_marginTop="14dp"
+                android:foreground="@drawable/lock"
+                app:layout_constraintBottom_toBottomOf="@+id/btnPassword1"
+                app:layout_constraintEnd_toEndOf="@+id/btnPassword1"
+                app:layout_constraintStart_toStartOf="@+id/btnPassword1"
+                app:layout_constraintTop_toTopOf="@+id/btnPassword1"
+                app:layout_constraintVertical_bias="0.51"
+                app:srcCompat="@drawable/lock" />
+        </FrameLayout>
+    -->
     <!--
     <Button
         android:layout_width="280dp"
