--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -17,8 +17,8 @@
         <!-- ActionBar : Back / Title / Info -->
         <LinearLayout
             android:id="@+id/setting_btnPrev_layout"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginStart="24dp"
             android:layout_gravity="center|center_horizontal|center_vertical"
             android:gravity="center|center_horizontal|center_vertical"
@@ -34,13 +34,14 @@
                 android:src="@drawable/prev_image_selector"
                 android:layout_gravity="center|center_horizontal|center_vertical"
                 android:gravity="center|center_horizontal|center_vertical"
-                 />
+                />
         </LinearLayout>
         <TextView
             android:id="@+id/myinfo_title_activity"
             android:fontFamily="@font/nanumsquareregular"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginRight="24dp"
             android:gravity="center|center_horizontal"
             android:text="@string/title_setting"
             android:textColor="#3e3e3e"
