--- a/app/src/main/res/layout/car_list_item.xml
+++ b/app/src/main/res/layout/car_list_item.xml
@@ -14,7 +14,7 @@
         android:layout_marginRight="24dp"
         android:layout_marginTop="20dp"
         android:gravity="center_vertical"
-        android:background="@drawable/default_background_type_2"
+        android:background="@drawable/shadow_button_type_1"
         android:orientation="horizontal">
         <LinearLayout
             android:layout_width="250dp"
@@ -80,21 +80,21 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:gravity="right"
+            android:layout_marginRight="20dp">
 
             <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_gravity="center|center_horizontal|center_vertical"
-                android:gravity="right|center">
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                >
 
                 <ImageView
                     android:id="@+id/car_delete"
                     android:layout_width="24dp"
                     android:layout_height="24dp"
-                    android:layout_marginRight="24dp"
-                    android:src="@drawable/close" />
+                    android:src="@drawable/close_black" />
             </LinearLayout>
 
         </LinearLayout>
