카카오맵 예약시간 설정중 지도 이동 버그 수정 렌터카 차량목록 및 필터 부분 액티비티 구상

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -44,9 +44,10 @@
 
     <color name="color_table_1">#f0f3f6</color>
 
-    <color name="agent_color_1">#803e3e3e</color>
-    <color name="agent_color_1NoOpp">#ff3e3e3e</color>
-    <color name="agent_color_1Opp">#993e3e3e</color>
+    <color name="agent_color_1">#803e3e3e</color> //50% opacity
+    <color name="agent_color_1NoOpp">#ff3e3e3e</color> //100% opacity
+    <color name="agent_color_1Opp">#993e3e3e</color> //60% opacity
+    <color name="agent_color_red">#ff4d4d</color>
 
 </resources>
 
